Add deal wheel CSS

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,2 +1,2 @@
 @import "globals", "colors", "typography", "screens", "utopia";
-@import "ImageSearch", "CarSlider";
+@import "ImageSearch", "CarSlider", "DealWheel";
