Add social share scss

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,2 +1,2 @@
 @import "globals", "colors", "typography", "screens", "utopia";
-@import "ImageSearch", "CarSlider", "DealWheel";
+@import "ImageSearch", "CarSlider", "DealWheel", "SocialShare";
